# openfast

./: CMakeLists.txt  EXTRACTION_PARAMS.md  INIT_FUNCTION_ISSUE.md  TRANSLATION_TIPS.md  vit.yaml
baselines/: README.md
cmake/: OpenfastFortranOptions.cmake
kernel/: Compute_iLoweriUpper.0.0.1  Compute_iLoweriUpper.0.0.10  Compute_iLoweriUpper.0.0.11  Compute_iLoweriUpper.0.0.12  Compute_iLoweriUpper.0.0.13  Compute_iLoweriUpper.0.0.14  Compute_iLoweriUpper.0.0.15  Compute_iLoweriUpper.0.0.16  Compute_iLoweriUpper.0.0.17  Compute_iLoweriUpper.0.0.18  Compute_iLoweriUpper.0.0.19  Compute_iLoweriUpper.0.0.2  Compute_iLoweriUpper.0.0.20  Compute_iLoweriUpper.0.0.21  Compute_iLoweriUpper.0.0.22  Compute_iLoweriUpper.0.0.3  Compute_iLoweriUpper.0.0.4  Compute_iLoweriUpper.0.0.5  Compute_iLoweriUpper.0.0.6  Compute_iLoweriUpper.0.0.7  Compute_iLoweriUpper.0.0.8  kgen_statefile.lst
kernel/AFI_ComputeAirfoilCoefs/: AFI_ComputeAirfoilCoefs.0.0.1  AFI_ComputeAirfoilCoefs.0.0.10  AFI_ComputeAirfoilCoefs.0.0.11  AFI_ComputeAirfoilCoefs.0.0.12  AFI_ComputeAirfoilCoefs.0.0.13  AFI_ComputeAirfoilCoefs.0.0.14  AFI_ComputeAirfoilCoefs.0.0.15  AFI_ComputeAirfoilCoefs.0.0.16  AFI_ComputeAirfoilCoefs.0.0.17  AFI_ComputeAirfoilCoefs.0.0.18  AFI_ComputeAirfoilCoefs.0.0.19  AFI_ComputeAirfoilCoefs.0.0.2  AFI_ComputeAirfoilCoefs.0.0.20  AFI_ComputeAirfoilCoefs.0.0.3  AFI_ComputeAirfoilCoefs.0.0.4  AFI_ComputeAirfoilCoefs.0.0.5  AFI_ComputeAirfoilCoefs.0.0.6  AFI_ComputeAirfoilCoefs.0.0.7  AFI_ComputeAirfoilCoefs.0.0.8  AFI_ComputeAirfoilCoefs.0.0.9  AirfoilInfo.f90  AirfoilInfo.f90.kgen  AirfoilInfo_Types.f90  AirfoilInfo_Types.f90.kgen  BEMT.f90  BEMT.f90.kgen  BEMT_Types.f90  BEMT_Types.f90.kgen  DBEMT_Types.f90  DBEMT_Types.f90.kgen  Makefile  Makefile.kgen  NWTC_Base_reduced.f90  NWTC_Base_reduced.f90.kgen  NWTC_IO.f90  NWTC_IO.f90.kgen  NWTC_Library.f90  NWTC_Library.f90.kgen  NWTC_Library_Types.f90  NWTC_Library_Types.f90.kgen  (+20 more)
kernel/AFI_ComputeUACoefs/: AFI_ComputeUACoefs.0.0.10  AFI_ComputeUACoefs.0.0.12  AFI_ComputeUACoefs.0.0.13  AFI_ComputeUACoefs.0.0.15  AFI_ComputeUACoefs.0.0.16  AFI_ComputeUACoefs.0.0.19  AFI_ComputeUACoefs.0.0.2  AFI_ComputeUACoefs.0.0.20  AFI_ComputeUACoefs.0.0.3  AFI_ComputeUACoefs.0.0.5  AFI_ComputeUACoefs.0.0.6  AFI_ComputeUACoefs.0.0.9  AirfoilInfo.f90  AirfoilInfo.f90.kgen  AirfoilInfo_Types.f90  AirfoilInfo_Types.f90.kgen  Makefile  Makefile.kgen  ModMesh.f90  ModMesh.f90.kgen  ModMesh_Types.f90  ModMesh_Types.f90.kgen  NWTC_Base_reduced.f90  NWTC_Base_reduced.f90.kgen  NWTC_IO.f90  NWTC_IO.f90.kgen  NWTC_Library.f90  NWTC_Library.f90.kgen  NWTC_Library_Types.f90  NWTC_Library_Types.f90.kgen  NWTC_Num.f90  NWTC_Num.f90.kgen  SingPrec.f90  SingPrec.f90.kgen  SysIVF_reduced.f90  SysIVF_reduced.f90.kgen  UnsteadyAero.f90  UnsteadyAero.f90.kgen  UnsteadyAero_Types.f90  UnsteadyAero_Types.f90.kgen  (+11 more)
kernel/CalculateUACoeffs/: AirfoilInfo.f90  AirfoilInfo.f90.kgen  AirfoilInfo_Types.f90  AirfoilInfo_Types.f90.kgen  CalculateUACoeffs.0.0.1  CalculateUACoeffs.0.0.10  CalculateUACoeffs.0.0.11  CalculateUACoeffs.0.0.12  CalculateUACoeffs.0.0.13  CalculateUACoeffs.0.0.14  CalculateUACoeffs.0.0.15  CalculateUACoeffs.0.0.16  CalculateUACoeffs.0.0.17  CalculateUACoeffs.0.0.18  CalculateUACoeffs.0.0.19  CalculateUACoeffs.0.0.2  CalculateUACoeffs.0.0.20  CalculateUACoeffs.0.0.3  CalculateUACoeffs.0.0.4  CalculateUACoeffs.0.0.5  CalculateUACoeffs.0.0.6  CalculateUACoeffs.0.0.7  CalculateUACoeffs.0.0.8  CalculateUACoeffs.0.0.9  Makefile  NWTC_Base_reduced.f90  NWTC_Base_reduced.f90.kgen  NWTC_IO.f90  NWTC_IO.f90.kgen  NWTC_LAPACK.f90  NWTC_LAPACK.f90.kgen  NWTC_Library.f90  NWTC_Library.f90.kgen  NWTC_Library_Types.f90  NWTC_Library_Types.f90.kgen  NWTC_Num.f90  NWTC_Num.f90.kgen  SingPrec.f90  SingPrec.f90.kgen  SysIVF_reduced.f90  (+20 more)
kernel/Calculate_C_alpha/: AirfoilInfo.f90  AirfoilInfo_Types.f90  Calculate_C_alpha.0.0.1  Calculate_C_alpha.0.0.10  Calculate_C_alpha.0.0.11  Calculate_C_alpha.0.0.12  Calculate_C_alpha.0.0.13  Calculate_C_alpha.0.0.14  Calculate_C_alpha.0.0.15  Calculate_C_alpha.0.0.16  Calculate_C_alpha.0.0.17  Calculate_C_alpha.0.0.18  Calculate_C_alpha.0.0.19  Calculate_C_alpha.0.0.2  Calculate_C_alpha.0.0.20  Calculate_C_alpha.0.0.3  Calculate_C_alpha.0.0.4  Calculate_C_alpha.0.0.5  Calculate_C_alpha.0.0.6  Calculate_C_alpha.0.0.7  Calculate_C_alpha.0.0.8  Calculate_C_alpha.0.0.9  Makefile  Makefile.kgen  NWTC_Base_reduced.f90  NWTC_Base_reduced.f90.kgen  NWTC_IO.f90  NWTC_LAPACK.f90  NWTC_Library.f90  NWTC_Library.f90.kgen  NWTC_Library_Types.f90  NWTC_Library_Types.f90.kgen  NWTC_Num.f90  NWTC_Num.f90.kgen  SingPrec.f90  SingPrec.f90.kgen  SysIVF_reduced.f90  calculate_c_alpha.cpp  calculate_c_alpha.hpp  kernel_driver.f90  (+3 more)
kernel/Calculate_Cn/: AirfoilInfo.f90  AirfoilInfo.f90.kgen  AirfoilInfo_Types.f90  (+35 more)
modules/aerodyn/: CMakeLists.txt
modules/aerodyn/src/: AirfoilInfo.f90  DBEMT.f90  afi_computeairfoilcoefs.cpp  afi_computeuacoefs.cpp  afi_init.cpp  afi_validateinitinput.cpp  afi_wrheader.cpp  afi_wrtables.cpp  calculate_c_alpha.cpp  calculate_cn.cpp  calculateuacoeffs.cpp  compute_iloweriupper.cpp  computetau1.cpp  computetau2.cpp  computeua360_attachedflow.cpp  computeua360_cnoffset.cpp  computeua360_updatecnseparated.cpp  computeua360_updateseparationf.cpp  computeuaseparationfunction_oncl.cpp  computeuaseparationfunction_zero.cpp  dbemt_ab4.cpp  dbemt_abm4.cpp  dbemt_calccontstatederiv.cpp  dbemt_calcoutput.cpp  dbemt_init.cpp  dbemt_initstates.cpp  dbemt_initstates_allnodes.cpp  dbemt_reinit.cpp  dbemt_rk4.cpp  dbemt_updatestates.cpp  dbemt_validateinitinp.cpp  findboundingtables.cpp  vit_aerodyn_constants.h  vit_afi_parametertype_view.f90  vit_afi_table_type_view.f90  vit_bridge_extrapinterp.f90  vit_dbemt_continuousstatetype_view.f90  vit_dbemt_initinputtype_view.f90  vit_dbemt_inputtype_view.f90  vit_dbemt_otherstatetype_view.f90  (+6 more)
scripts/: check_aerodyn_nrel_drift.sh  generate_aerodyn_baseline.sh  generate_coverage.sh  integrate_all.sh  reset_to_clean.sh  run_nrel_regression.sh  verify_aerodyn_baselines.sh
translations/: vit_types.h
(+416 files in other folders)
